--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.23.3",
     "knex": "^0.21.2"
   },
   "devDependencies": {
