--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/hera/node-auth2-project#readme",
   "dependencies": {
+    "connect-session-knex": "^1.7.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^3.23.3",
     "knex": "^0.21.2"
   },
